--- a/css/query.css
+++ b/css/query.css
@@ -10,25 +10,21 @@
 
 .slide-pannel-container {
 	padding:0px !important;
-	height:100%;
-	border-right:solid 8px #4382A0;
-	border-top-right-radius: 6px;
-	border-bottom-right-radius: 6px;
 	position:relative;
-	display:flex;
-	flex-direction: row;
 }
 
 .query-container {
-	height:100%;
 	background-color:#E7E8EA;
 	padding:0px !important;
 	box-sizing:border-box;
+	border-right:solid 8px #4382A0;
+	border-top-right-radius: 6px;
+	border-bottom-right-radius: 6px;
 }
 
 .slide-pannel-button {
 	position:absolute;
-	right:-25px !important;
+	right:-17px !important;
 	top:50%;
 	background-color:#4382A0 !important;
 	padding:10px 5px !important;
@@ -72,9 +68,6 @@
 }
 
 .query-pane-content {
-	height:100%;
-	display:flex;
-	flex-direction:column;
 	max-width: 450px;
 }
 
